removed unnecessary response parameter